--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <!-- NOTE: the string 'TODO' appears everywhere you need to fill in information. -->
 <html>
 <head>
-<title>TODO:Title For Your Game</title>
+<title>Undercooked: Paleo</title>
 <!-- NOTE: this CSS sets up the ".figure" class to center images, and instructs images in ".figure"s to have space around them and to render crisp pixel edges when scaled [e.g. for retina displays]. -->
 <style>
 .figure {
@@ -15,25 +15,24 @@
 </style>
 </head>
 <body>
-<h1>TODO: Title For Your Game</h1>
-<p>TODO: one-sentence summary of your game, highlighting the unique "hook" of the game.</p>
+<h1>Undercooked: Paleo</h1>
+<p>Like Overcooked but for 1p, you don't cook anything, and you need to catch and kill a live chicken, dig up a peanut plant and throw a bunch of fruit into a barrel to make and serve the totally raw and breadless peanut butter, jelly and chicken sandwich. Delicious.</p>
 <!-- the <div> wrapping this image centers it on the page. -->
 <!-- TODO: drawing showing the main view of the game during play -->
 <div class="figure">
 <img src="game.png" />
 </div>
-<p>TODO: more information (2-3 sentences) about gameplay, referring to the image above.</p>
+<p>The game will start with the above appearance. The "kitchen" is a grid in the shape above (an O shape). The goals of the game is to catch and butcher the chicken at the cleaning table, dig up and clean the peanuts in the sink, throw a bunch of berries into a barrel, and serve the delicious concoction to an eager customer. And yes, the chicken is the bread.</p>
 
 <h2>Gameplay</h2>
-<p>TODO: Describe how the game starts, plays (e.g. what are the controls), and ends.</p>
+<p>The player starts in a random cell (that is not occupied) in the room. On the counter, there is a cleaning table, a sink, and a barrel. In the playing field, there is a peanut plant, berry bush, and a chicken. The player moves around (or rotates self) the room with the arrow keys (or WASD) and interacts with the square in front of it with the E key. The chicken has a very very basic AI (turn right or left, run away if you are directly in line of sight until it hits a wall). To assemble this delectable sandwich, the player must catch the chicken (be in cell adjacent to chicken, be facing it, and press E), dig and clean the peanuts (press e an arbitrary amount of time while adjacent to and facing the plant (bush disappears when done), then move to sink and interact with it), and process the jam (press e on bush (removes bush) and move to barrel, press e arbitrary amount of time). At the end of each task, the player has the item in its inventory. Once all of it is done, move to the serve area and drop off the masterpiece to the now hangry customer. The game then repeats, resetting and placing everything in random locations. The game ends when the player gets sued for spreading salmonella IE quits the game.</p>
 <!-- TODO: illustrate your descriptions with more drawings -->
 <div class="figure">
 <img src="before-reset.png" />
-<img src="after-reset.png" />
 </div>
 
 <h2>Assets</h2>
-<p>TODO: Provide a link to any preliminary 3D models, sounds, or <a href="https://github.com/ixchow/amoeba-escape/blob/master/tiles.png">textures</a> for the game. Make sure to only link to assets with appropriate licenses.</p>
+<p>Assets are borrowed from the Undercooked project asset folder at <a href="http://graphics.cs.cmu.edu/courses/15-466-f18/game0-designs/jgualtie/assets/">http://graphics.cs.cmu.edu/courses/15-466-f18/game0-designs/jgualtie/assets/</a>. Some more assets (edits of the previous assets) were made for the chicken, sink, and barrel, as well as edits to the bread, jam and peanut butter assets to fit the cleaning board, berries and peanut plants respectively, which are located <a href="">here</a> (with the prior assets).</p>
 
 </body>
 </html>
