final commit I think

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 </div>
 
 <h2>Assets</h2>
-<p>Assets are borrowed from the Undercooked project asset folder at <a href="http://graphics.cs.cmu.edu/courses/15-466-f18/game0-designs/jgualtie/assets/">http://graphics.cs.cmu.edu/courses/15-466-f18/game0-designs/jgualtie/assets/</a>. Some more assets (edits of the previous assets) were made for the chicken, sink, and barrel, as well as edits to the bread, jam and peanut butter assets to fit the cleaning board, berries and peanut plants respectively, which are located <a href="">here</a> (with the prior assets).</p>
+<p>Assets are borrowed from the Undercooked project asset folder at <a href="http://graphics.cs.cmu.edu/courses/15-466-f18/game0-designs/jgualtie/assets/">http://graphics.cs.cmu.edu/courses/15-466-f18/game0-designs/jgualtie/assets/</a>. Some more assets (edits of the previous assets) were made for the chicken, sink, and barrel, as well as edits to the bread, jam and peanut butter assets to fit the cleaning board, berries and peanut plants respectively, which are located in the assets <a href="https://github.com/Turtle50UP/15-466-design-template">here</a> (with the prior assets).</p>
 
 </body>
 </html>
