added an extra citation

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 </head>
 <body>
 <h1>Undercooked: Paleo</h1>
-<p>Like Overcooked but for 1p, you don't cook anything, and you need to catch and kill a live chicken, dig up a peanut plant and throw a bunch of fruit into a barrel to make and serve the totally raw and breadless peanut butter, jelly and chicken sandwich. Delicious.</p>
+<p>Like <a href="http://graphics.cs.cmu.edu/courses/15-466-f18/game0-designs/jgualtie/">Overcooked</a> but for 1p, you don't cook anything, and you need to catch and kill a live chicken, dig up a peanut plant and throw a bunch of fruit into a barrel to make and serve the totally raw and breadless peanut butter, jelly and chicken sandwich. Delicious.</p>
 <!-- the <div> wrapping this image centers it on the page. -->
 <!-- TODO: drawing showing the main view of the game during play -->
 <div class="figure">
